--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,7 +3,7 @@
 		"browser": true,
 		"es6": true
 	},
-	"extends": ["plugin:react/recommended", "airbnb"],
+	"extends": ["airbnb", "prettier", "prettier/react"],
 	"globals": {
 		"Atomics": "readonly",
 		"SharedArrayBuffer": "readonly"
@@ -15,7 +15,7 @@
 		"ecmaVersion": 2018,
 		"sourceType": "module"
 	},
-	"plugins": ["react"],
+	"plugins": ["prettier", "react"],
 	"rules": {
 		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
 	}
