--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -17,6 +17,8 @@
 	},
 	"plugins": ["prettier", "react"],
 	"rules": {
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }]
+		"react/prop-types": 0,
+		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
+		"react/jsx-props-no-spreading": 0
 	}
 }
