--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
 	"plugins": ["prettier", "react"],
 	"rules": {
 		"react/prop-types": 0,
-		"react/jsx-filename-extension": [1, { "extensions": [".js", ".jsx"] }],
-		"react/jsx-props-no-spreading": 0
+		"react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx"]}],
+		"react/jsx-props-no-spreading": 0,
+		"jsx-a11y/label-has-associated-control": 0
 	}
 }
