--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react-scripts": "3.4.1",
 		"styled-components": "^5.1.0",
 		"typeface-montserrat": "0.0.75",
+		"use-deep-compare-effect": "^1.3.1",
 		"yup": "^0.28.5"
 	},
 	"scripts": {
@@ -54,6 +55,7 @@
 		]
 	},
 	"devDependencies": {
+		"@babel/plugin-proposal-optional-chaining": "^7.10.1",
 		"@fcrezza/prettier-config": "^1.0.1",
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb": "^18.1.0",
