eject cra and make optional chaining works

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,5 @@
 {
+	"parser": "babel-eslint",
 	"env": {
 		"browser": true,
 		"es6": true
@@ -17,6 +18,7 @@
 	},
 	"plugins": ["prettier", "react"],
 	"rules": {
+		"no-unused-vars": 1,
 		"react/prop-types": 0,
 		"react/jsx-filename-extension": [1, {"extensions": [".js", ".jsx"]}],
 		"react/jsx-props-no-spreading": 0,
