--- a/package.json
+++ b/package.json
@@ -40,6 +40,8 @@
 		"jest-watch-typeahead": "0.4.2",
 		"mini-css-extract-plugin": "0.9.0",
 		"optimize-css-assets-webpack-plugin": "5.0.3",
+		"overlayscrollbars": "^1.12.0",
+		"overlayscrollbars-react": "^0.2.2",
 		"pnp-webpack-plugin": "1.6.4",
 		"postcss-flexbugs-fixes": "4.1.0",
 		"postcss-loader": "3.0.0",
@@ -48,6 +50,7 @@
 		"postcss-safe-parser": "4.0.1",
 		"react": "^16.13.1",
 		"react-app-polyfill": "^1.0.6",
+		"react-custom-scrollbars": "^4.2.1",
 		"react-dev-utils": "^10.2.1",
 		"react-dom": "^16.13.1",
 		"react-helmet": "^6.0.0",
@@ -57,6 +60,7 @@
 		"resolve-url-loader": "3.1.1",
 		"sass-loader": "8.0.2",
 		"semver": "6.3.0",
+		"socket.io-client": "^2.3.0",
 		"style-loader": "0.23.1",
 		"styled-components": "^5.1.0",
 		"terser-webpack-plugin": "2.3.5",
