--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,11 +4,7 @@
 		"browser": true,
 		"es6": true
 	},
-	"extends": ["airbnb", "prettier", "prettier/react"],
-	"globals": {
-		"Atomics": "readonly",
-		"SharedArrayBuffer": "readonly"
-	},
+	"extends": ["react-app", "airbnb", "prettier", "prettier/react"],
 	"parserOptions": {
 		"ecmaFeatures": {
 			"jsx": true
