--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"jest-resolve": "24.9.0",
 		"jest-watch-typeahead": "0.4.2",
 		"mini-css-extract-plugin": "0.9.0",
+		"normalize.css": "^8.0.1",
 		"optimize-css-assets-webpack-plugin": "5.0.3",
 		"overlayscrollbars": "^1.12.0",
 		"overlayscrollbars-react": "^0.2.2",
@@ -54,6 +55,7 @@
 		"react-custom-scrollbars": "^4.2.1",
 		"react-dev-utils": "^10.2.1",
 		"react-dom": "^16.13.1",
+		"react-error-boundary": "^3.1.1",
 		"react-helmet": "^6.0.0",
 		"react-hook-form": "^5.7.2",
 		"react-router-dom": "^5.2.0",
@@ -80,23 +82,14 @@
 		"start": "node scripts/start.js",
 		"build": "node scripts/build.js",
 		"test": "node scripts/test.js",
-		"format": "prettier --write '**/*.js'",
-		"lint": "eslint '**/*.js' --fix"
+		"format": "prettier --check --write \"**/*.{js, json}\"",
+		"lint": "eslint --fix src",
+		"setup": "npm install && npm run lint && npm run format"
 	},
-	"prettier": "@fcrezza/prettier-config",
 	"husky": {
 		"hooks": {
-			"pre-commit": "lint-staged"
+			"pre-commit": "npm run lint && npm run format"
 		}
-	},
-	"lint-staged": {
-		"**/*.js": [
-			"prettier --write",
-			"eslint --fix"
-		]
-	},
-	"eslintConfig": {
-		"extends": "react-app"
 	},
 	"browserslist": {
 		"production": [
@@ -112,7 +105,6 @@
 	},
 	"devDependencies": {
 		"@babel/plugin-proposal-optional-chaining": "^7.10.1",
-		"@fcrezza/prettier-config": "^1.0.1",
 		"eslint": "^6.8.0",
 		"eslint-config-airbnb": "^18.1.0",
 		"eslint-config-prettier": "^6.11.0",
@@ -122,7 +114,6 @@
 		"eslint-plugin-react": "^7.20.0",
 		"eslint-plugin-react-hooks": "^2.5.1",
 		"husky": "^4.2.5",
-		"lint-staged": "^10.2.4",
 		"prettier": "^2.0.5"
 	},
 	"jest": {
