--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"overlayscrollbars": "^1.12.0",
 		"overlayscrollbars-react": "^0.2.2",
 		"pnp-webpack-plugin": "1.6.4",
+		"polished": "^4.1.1",
 		"postcss-flexbugs-fixes": "4.1.0",
 		"postcss-loader": "3.0.0",
 		"postcss-normalize": "8.0.1",
