--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 		"react-dev-utils": "^10.2.1",
 		"react-dom": "^16.13.1",
 		"react-error-boundary": "^3.1.1",
-		"react-helmet": "^6.0.0",
+		"react-helmet": "^6.1.0",
 		"react-hook-form": "^5.7.2",
 		"react-router-dom": "^5.2.0",
 		"resolve": "1.15.0",
@@ -71,6 +71,7 @@
 		"terser-webpack-plugin": "2.3.5",
 		"ts-pnp": "1.1.6",
 		"typeface-montserrat": "0.0.75",
+		"typeface-poppins": "^1.1.13",
 		"url-loader": "2.3.0",
 		"use-deep-compare-effect": "^1.3.1",
 		"webpack": "4.42.0",
